--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <h2>Afbeeldingen toevoegen</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/placeholder.jpg">
+                        <img src="images/afbeelding.png">
                     </div>
                 </header>
                 <section>
